blogs layout issue,parallax issue and responsiveness was fixed

--- a/_scss/components/_blogs.scss
+++ b/_scss/components/_blogs.scss
@@ -2,7 +2,9 @@
 * https://github.com/joshualande/joshualande.github.io/blob/master/public/css/poole.css
 */
 
-
+#blogs {
+  padding-top: 4rem;
+}
 
 .post {
   margin-bottom: 4em;
