--- a/css/main.css
+++ b/css/main.css
@@ -7940,6 +7940,10 @@ strong {
 /*
 * https://github.com/joshualande/joshualande.github.io/blob/master/public/css/poole.css
 */
+#blogs {
+  padding-top: 4rem;
+}
+
 .post {
   margin-bottom: 4em;
   text-align: center;
